[package]
name = "pasetors"
version = "0.5.0-alpha.2" # Update html_root_url in lib.rs along with this.
authors = ["brycx <brycx@protonmail.com>"]
edition = "2018"
description = "PASETO: Platform-Agnostic Security Tokens (in Rust)"
keywords = [ "cryptography", "crypto", "token", "paseto", "authentication" ]
categories = [ "cryptography", "authentication" ]
readme = "README.md"
repository = "https://github.com/brycx/pasetors"
documentation = "https://docs.rs/pasetors"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
hex = "0.4.2"
ed25519-compact = "1.0.11"
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }

[dependencies.ed25519-compact]
version = "1.0.11"
default-features = false
features = ["random"]
optional = true

[dependencies.orion]
version = "0.17.0"
default-features = false
optional = true

[dependencies.getrandom]
version = "0.2"
features = [ "js" ]

[dependencies.ct-codecs]
version = "1.1.1"
default-features = false

[dependencies.zeroize]
version = "1.4.1"
default-features = false

[dependencies.serde_json]
version = "1.0.41"
optional = true

[dependencies.time]
version = "0.3"
features = ["parsing", "formatting"]
optional = true

[dependencies.subtle]
version = "2.4.1"
default-features = false

[dependencies.num-bigint]
version = "0.4.3"
default-features = false
optional = true

[dependencies.num-traits]
version = "0.2.14"
default-features = false
optional = true

[dependencies.ring]
version = "0.16.20"
default-features = false
optional = true

[dependencies.pkcs8]
version = "0.8.0"
features = ["alloc"]
optional = true

[dependencies.sec1]
version = "0.2.1"
optional = true

[features]
default = [ "std", "v4", "paserk" ]
std = [ "serde_json", "time" ]
v2 = [ "orion", "ed25519-compact" ]
v3 = [ "num-bigint", "num-traits", "ring", "pkcs8", "sec1" ]
v4 = [ "orion", "ed25519-compact" ]
paserk = [ "orion" ]