[package]
name = "pasetors"
version = "0.5.0" # Update html_root_url in lib.rs along with this.
authors = ["brycx <brycx@protonmail.com>"]
edition = "2018"
description = "PASETO: Platform-Agnostic Security Tokens (in Rust)"
keywords = [ "cryptography", "crypto", "token", "paseto", "authentication" ]
categories = [ "cryptography", "authentication" ]
readme = "README.md"
repository = "https://github.com/brycx/pasetors"
documentation = "https://docs.rs/pasetors"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
hex = "0.4.2"
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }

[dependencies.ed25519-compact]
version = "1.0.11"
default-features = false
features = ["random"]
optional = true

[dependencies.orion]
version = "0.17.0"
default-features = false
optional = true

[dependencies.getrandom]
version = "0.2"
features = [ "js" ]

[dependencies.ct-codecs]
version = "1.1.1"
default-features = false

[dependencies.zeroize]
version = "1.4.1"
default-features = false

[dependencies.serde_json]
version = "1.0.41"
optional = true

[dependencies.time]
version = "0.3"
features = ["parsing", "formatting"]
optional = true

[dependencies.subtle]
version = "2.4.1"
default-features = false

[dependencies.regex]
version = "1.5.5"
optional = true

[dependencies.p384]
version = "0.11.0"
optional = true

[dependencies.rand_core]
version = "0.6.3"
default-features = false
features = ["getrandom"]
optional = true

[dependencies.sha2]
version = "0.10.2"
optional = true

[features]
default = [ "std", "v4", "paserk", "v2" ]
std = [ "serde_json", "time", "regex" ]
v2 = [ "orion", "ed25519-compact" ]
v3 = [ "rand_core", "p384", "sha2" ]
v4 = [ "orion", "ed25519-compact" ]
paserk = [ "orion" ]