[package]
name = "pasetors"
version = "0.7.5"
authors = ["brycx <brycx@protonmail.com>"]
edition = "2018"
description = "PASETO: Platform-Agnostic Security Tokens (in Rust)"
keywords = ["cryptography", "crypto", "token", "paseto", "authentication"]
categories = ["cryptography", "authentication"]
readme = "README.md"
repository = "https://github.com/brycx/pasetors"
documentation = "https://docs.rs/pasetors"
license = "MIT"
rust-version = "1.85.0"                                                    # Update CI test along with this.

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
hex = "0.4.2"
serde_json = "1.0.41"
serde = "1.0"
serde_derive = "1.0"

[dependencies.ed25519-compact]
version = "2.0.2"
default-features = false
features = ["random"]
optional = true

[dependencies.orion]
version = "0.17.0"
default-features = false
optional = true

[dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[dependencies.ct-codecs]
version = "1.1.1"
default-features = false

[dependencies.zeroize]
version = "1.4.1"
default-features = false

[dependencies.serde_json]
version = "1.0.41"
optional = true

[dependencies.time]
version = "0.3"
features = ["parsing", "formatting"]
optional = true

[dependencies.subtle]
version = "2.4.1"
default-features = false

[dependencies.regex]
version = "1.5.5"
optional = true

[dependencies.p384]
version = "0.13.0"
optional = true

[dependencies.rand_core]
version = "0.6.3"
default-features = false
features = ["getrandom"]
optional = true

[dependencies.sha2]
version = "0.10.2"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[features]
default = ["std", "v4", "paserk"]
serde = ["dep:serde", "dep:serde_derive"]
std = ["serde_json", "time", "regex"]
v2 = ["orion", "ed25519-compact"]
v3 = ["rand_core", "p384", "sha2"]
v4 = ["orion", "ed25519-compact"]
paserk = ["orion"]
